# picoCTF

./: .gitignore  Dockerfile  README.md  ctf_dataset_export.json  docker-compose.yml  pyproject.toml  requirements.txt
dataset/: challenges.json
dataset/files/: data.txt
env/: ctf_cli.py  ctf_dataset.py  picoctf_rl_env.py
scripts/: setup-dev.sh
src/: __init__.py  challenge_converter.py  challenge_loader.py  cli.py  ctf_cli.py  ctf_cli_improved.py  ctf_dataset.py  ctf_models.py  train_rl_agent.py  utils.py
